// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table.vue > matches snapshot with assigned \`caption\` prop 1`] = `
"<table id="sds-table" data-id="sds-table" class="table-prose dark:table-prose-invert">
  <caption>
    <!-- @slot Caption content. This will override the **caption** prop. -->Caption
  </caption>
  <colgroup>
    <!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class="">
  </colgroup>
  <thead class="border-t dark:border-gray-700">
    <tr>
      <!--v-if-->
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Title</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Fruit</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Vegetable</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Created</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Last modified</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
    </tr>
  </thead>
  <tbody>
    <tr id="sds-table_tr_1" class="">
      <!--v-if-->
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->A title
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Apple
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Broccoli
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->12/31/1999
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->11/11/2014
      </td>
    </tr>
    <!--v-if-->
    <tr id="sds-table_tr_2" class="">
      <!--v-if-->
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->B title
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Banana
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Carrots
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->1/31/2013
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->10/9/2013
      </td>
    </tr>
    <!--v-if-->
  </tbody>
</table>"
`;

exports[`Table.vue > matches snapshot with assigned \`enableDrawer\` prop 1`] = `
"<table id="sds-table" data-id="sds-table" class="table-prose dark:table-prose-invert">
  <!--v-if-->
  <colgroup>
    <!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class="">
  </colgroup>
  <thead class="border-t dark:border-gray-700">
    <tr>
      <th><span class="sr-only">Drawers</span></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Title</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Fruit</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Vegetable</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Created</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Last modified</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
    </tr>
  </thead>
  <tbody>
    <tr id="sds-table_tr_1" class="">
      <td class="cursor-pointer w-4"><button><svg height="16" class="mt-1 text-gray-600 dark:text-gray-400 hover:text-blue-500 dark:hover:text-blue-400" viewBox="0 0 384 512" width="16" xmlns="http://www.w3.org/2000/svg">
            <path d="M342.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L274.7 256L105.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z" fill="currentColor"></path>
          </svg><span class="sr-only">Toggle drawer</span></button></td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->A title
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Apple
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Broccoli
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->12/31/1999
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->11/11/2014
      </td>
    </tr>
    <!--v-if-->
    <tr id="sds-table_tr_2" class="">
      <td class="cursor-pointer w-4"><button><svg height="16" class="mt-1 text-gray-600 dark:text-gray-400 hover:text-blue-500 dark:hover:text-blue-400" viewBox="0 0 384 512" width="16" xmlns="http://www.w3.org/2000/svg">
            <path d="M342.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L274.7 256L105.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z" fill="currentColor"></path>
          </svg><span class="sr-only">Toggle drawer</span></button></td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->B title
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Banana
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Carrots
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->1/31/2013
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->10/9/2013
      </td>
    </tr>
    <!--v-if-->
  </tbody>
</table>"
`;

exports[`Table.vue > matches snapshot with entries but no action col props assigned 1`] = `
"<table id="sds-table" data-id="sds-table" class="table-prose dark:table-prose-invert">
  <!--v-if-->
  <colgroup>
    <!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class="">
  </colgroup>
  <thead class="border-t dark:border-gray-700">
    <tr>
      <!--v-if-->
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Title</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Fruit</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Vegetable</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Created</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Last modified</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="cursor-default">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Actions</span>
          <!--v-if-->
        </button></th>
    </tr>
  </thead>
  <tbody>
    <tr id="sds-table_tr_1" class="">
      <!--v-if-->
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->A title
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Apple
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Broccoli
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->12/31/1999
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->11/11/2014
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format --><button class="btn btn-link text-red-300 btn-sm"><i class="fas fa-trash"></i> Remove entry </button>
      </td>
    </tr>
    <!--v-if-->
    <tr id="sds-table_tr_2" class="">
      <!--v-if-->
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->B title
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Banana
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Carrots
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->1/31/2013
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->10/9/2013
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format --><button class="btn btn-link text-red-300 btn-sm"><i class="fas fa-trash"></i> Remove entry </button>
      </td>
    </tr>
    <!--v-if-->
  </tbody>
</table>"
`;

exports[`Table.vue > matches snapshot with items and action col props assigned 1`] = `
"<table id="sds-table" data-id="sds-table" class="table-prose dark:table-prose-invert">
  <!--v-if-->
  <colgroup>
    <!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class="null">
  </colgroup>
  <thead class="border-t dark:border-gray-700">
    <tr>
      <!--v-if-->
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Title</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Fruit</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Vegetable</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Created</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="text-gray-900 dark:text-gray-100">Last modified</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-100 -mb-3" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <!--v-if-->
            <path d="M279 224H41c-21.4 0-32.1-25.9-17-41L143 64c9.4-9.4 24.6-9.4 33.9 0l119 119c15.2 15.1 4.5 41-16.9 41z" fill="currentColor"></path>
            <!--v-if-->
          </svg>
        </button></th>
    </tr>
  </thead>
  <tbody>
    <tr id="sds-table_tr_2" class="">
      <!--v-if-->
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->B title
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Banana
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Carrots
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->1/31/2013
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->10/9/2013
      </td>
    </tr>
    <!--v-if-->
    <tr id="sds-table_tr_1" class="">
      <!--v-if-->
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->A title
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Apple
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Broccoli
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->12/31/1999
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->11/11/2014
      </td>
    </tr>
    <!--v-if-->
  </tbody>
</table>"
`;

exports[`Table.vue > matches snapshot with multisort columns 1`] = `
"<table id="sds-table" data-id="sds-table" class="table-prose dark:table-prose-invert">
  <!--v-if-->
  <colgroup>
    <!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class="">
  </colgroup>
  <thead class="border-t dark:border-gray-700">
    <tr>
      <!--v-if-->
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Title</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap select-none group"><button type="button" class="after:content-['/'] after:font-normal after:inline-block after:ml-0.5 last:after:hidden after:mr-4">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Fruit</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button><button type="button" class="after:content-['/'] after:font-normal after:inline-block after:ml-0.5 last:after:hidden after:mr-4">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="font-normal">Vegetable</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Created</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Last modified</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
    </tr>
  </thead>
  <tbody>
    <tr id="sds-table_tr_1" class="">
      <!--v-if-->
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->A title
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->12/31/1999
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->11/11/2014
      </td>
    </tr>
    <!--v-if-->
    <tr id="sds-table_tr_2" class="">
      <!--v-if-->
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->B title
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->1/31/2013
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->10/9/2013
      </td>
    </tr>
    <!--v-if-->
  </tbody>
</table>"
`;

exports[`Table.vue > matches snapshot with no props assigned 1`] = `
"<table id="sds-table" data-id="sds-table" class="table-prose dark:table-prose-invert">
  <!--v-if-->
  <colgroup></colgroup>
  <thead class="border-t dark:border-gray-700">
    <tr>
      <!--v-if-->
    </tr>
  </thead>
  <tbody></tbody>
</table>"
`;

exports[`Table.vue > sorts table by field (column) 1`] = `
"<table id="sds-table" data-id="sds-table" class="table-prose dark:table-prose-invert">
  <!--v-if-->
  <colgroup>
    <!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class="null"><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class="">
  </colgroup>
  <thead class="border-t dark:border-gray-700">
    <tr>
      <!--v-if-->
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Title</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="text-gray-900 dark:text-gray-100">Fruit</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-100 -mt-2" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <!--v-if-->
            <!--v-if-->
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41z" fill="currentColor"></path>
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Vegetable</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Created</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Last modified</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
    </tr>
  </thead>
  <tbody>
    <tr id="sds-table_tr_2" class="">
      <!--v-if-->
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->B title
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Banana
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Carrots
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->1/31/2013
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->10/9/2013
      </td>
    </tr>
    <!--v-if-->
    <tr id="sds-table_tr_1" class="">
      <!--v-if-->
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->A title
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Apple
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Broccoli
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->12/31/1999
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->11/11/2014
      </td>
    </tr>
    <!--v-if-->
  </tbody>
</table>"
`;

exports[`Table.vue > sorts table using an external source as its sorting behavior 1`] = `
"<table id="sds-table" data-id="sds-table" class="table-prose dark:table-prose-invert">
  <!--v-if-->
  <colgroup>
    <!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class="null"><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class=""><!-- @slot Col content. Used to help style columns. @binding active, activeClass -->
    <col class="">
  </colgroup>
  <thead class="border-t dark:border-gray-700">
    <tr>
      <!--v-if-->
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="text-gray-900 dark:text-gray-100">Title</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-100 -mt-2" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <!--v-if-->
            <!--v-if-->
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41z" fill="currentColor"></path>
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Fruit</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Vegetable</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Created</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
      <th class="text-left whitespace-nowrap space-x-1 select-none group"><button class="">
          <!-- @slot Head content. Allows for the customization of field titles. @binding field, active --><span class="">Last modified</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="inline-block w-4 h-4 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1 group-hover:opacity-50" preserveAspectRatio="xMidYMid meet" viewBox="0 0 320 512">
            <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z" fill="currentColor"></path>
            <!--v-if-->
            <!--v-if-->
          </svg>
        </button></th>
    </tr>
  </thead>
  <tbody>
    <tr id="sds-table_tr_1" class="">
      <!--v-if-->
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->A title
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Apple
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Broccoli
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->12/31/1999
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->11/11/2014
      </td>
    </tr>
    <!--v-if-->
    <tr id="sds-table_tr_2" class="">
      <!--v-if-->
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->B title
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Banana
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->Carrots
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->1/31/2013
      </td>
      <td class="">
        <!-- @slot Cell content. Allow for styling table cell content. @binding value, item, and format -->10/9/2013
      </td>
    </tr>
    <!--v-if-->
  </tbody>
</table>"
`;
